src/test/deca/demo/error/identifier_not_declared.deca
// Programme dans lequel on utilise une variable non déclarée
{
    // Utilisation de la variable i qui n'est pas déclarée
    while(undeclared_var <= 10) {
        undeclared_var = undeclared_var + 1;
        println(undeclared_var);
    }
}
